[B]1.2.0[/B]
- Update youtube api keys
- Rework of router scheme
- Tweaks for Matrix

[B]1.1.0[/B]
- Add bookmarking feature

[B]1.0.3[/B]
- Added FTV news channel

[B]1.0.2[/B]
- Re-addition of previously unsupported streams
- Properly check for stream m3u8/mpd and dash activation

[B]1.0.1[/B]
- Removed unsupported streams
- Check if Kodi Leia+ for asking about inputstream addon

[B]1.0.0[/B]
- Final stable version

[B]0.0.1~alpha1[/B]
- Initial version