@@ -1,3 +1,9 @@
+[B]1.3.0[/B]
+- Change cache method
+- Place youtube channels on submenu
+- Change main label from "Live" to "Fashion TV Live"
+- Remove check for inputstream addon
+
 [B]1.2.0[/B]
 - Update youtube api keys
 - Rework of router scheme
